--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Roboto;
-    background-image: url(/images/fondo.png);
+    background-image: url(../images/fondo.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
